branch para pantalla de inicio de app
agregado a pantalla principal el título y botón de seteo

modificado noombre de strings a ingles y agregado styles.xml con estilo de titulo y dimens.xml con dimen de separacion en layout

addressed various PR notes, TODO: change layout

forgot to add files to previous commit

changed layout type and app name string

renamed packages and some references from parkingSystemJava to estacionAR

changed app_name string first letter to lower case to mantain consistency

comments fix

fixed new comments about title and code format

fix in textview id

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">ParkingSystemJava</string>
+    <string name="app_name">EstacionAR</string>
+    <string name="main_activity_text_view_title">EstacionAR</string>
+    <string name="main_activity_button_set_parking">Establecer estacionamientos</string>
 </resources>
