--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">EstacionAR</string>
     <string name="main_activity_text_view_title">EstacionAR</string>
     <string name="main_activity_button_set_parking">Establecer estacionamientos</string>
+    <string name="main_activity_toast_set_parking_confirmed">Se establecieron %1$d estacionamientos.</string>
 </resources>
