implementd user parking setting feature
comments fixed, added listener package

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="app_name">EstacionAR</string>
     <string name="main_activity_text_view_title">EstacionAR</string>
     <string name="main_activity_button_set_parking">Establecer estacionamientos</string>
-    <string name="main_activity_toast_set_parking_confirmed">Se establecieron %1$d estacionamientos.</string>
+    <string name="fragment_configure_parking_lots_title">Establecer estacionamientos</string>
+    <string name="fragment_configure_parking_lots_btn_ok">OK</string>
+    <string name="fragment_configure_parking_lots_btn_cancel">Cancelar</string>
+    <string name="fragment_configure_parking_lots_tv_hint">Ingrese cantidad de espacios…</string>
+    <string name="fragment_configure_parking_lots_toast_empty_input">Por favor ingrese un numero.</string>
+    <string name="fragment_configure_parking_lots_toast_confirm">Se establecieron %1$d estacionamientos</string>
 </resources>
