added functionality to save a reservation
comments fixes

more fixes

minor fixes

more comments fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,15 @@
     <string name="activity_new_reservation_tv_title">Nueva reserva</string>
     <string name="fragment_reservation_tv_date_picker_hint">Seleccione una fecha</string>
     <string name="fragment_reservation_tv_time_picker_hint">Seleccione un horario</string>
-    <string name="reservation_activiy_btn_start_date">Seleccionar inicio</string>
-    <string name="reservation_activiy_btn_end_date">Seleccionar fin</string>
-    <string name="reservation_activiy_tv_start_date_hint">Inicio de reserva</string>
-    <string name="reservation_activiy_tv_end_date_hint">Fin de reserva</string>
-    <string name="reservation_activiy_edit_text_lot_number_hint">Ingrese su numero de estacionamiento</string>
-    <string name="reservation_activiy_edit_text_password_hint">Ingrese su clave</string>
+    <string name="reservation_activity_btn_start_date">Seleccionar inicio</string>
+    <string name="reservation_activity_btn_end_date">Seleccionar fin</string>
+    <string name="reservation_activity_tv_start_date_hint">Inicio de reserva</string>
+    <string name="reservation_activity_tv_end_date_hint">Fin de reserva</string>
+    <string name="reservation_activity_edit_text_lot_number_hint">Ingrese su numero de estacionamiento</string>
+    <string name="reservation_activity_edit_text_password_hint">Ingrese su clave</string>
+    <string name="reservation_view_missing_start_date_toast">Por favor seleccione el inicio de la reserva</string>
+    <string name="reservation_view_missing_end_date_toast">Por favor seleccione el fin de la reserva</string>
+    <string name="reservation_view_missing_parking_lot_toast">Por favor ingrese el número de estacionamiento</string>
+    <string name="reservation_view_missing_user_password_toast">Por favor ingrese su clave</string>
+    <string name="reservation_view_reservation_saved_toast">Reserva guardada con éxito</string>
 </resources>
